Fix index page content section overlap

--- a/app/assets/stylesheets/components/contentSection.scss
+++ b/app/assets/stylesheets/components/contentSection.scss
@@ -69,9 +69,7 @@
     flex-direction: column;
   }
 
-  .contentSection-body.mod-fill-vertical-space {
-    height: 100%;
-  }
+
 
 .contentSection.mod-overlap-top-image {
   @media (min-width: $width-content-overlap-top-image) {
